src/compose/tests/expected/conditional_missing_import.txt
error: required import 'b' not found
  ┌─ tests/conditional_import_fail/top.wgsl:1:1
  │
1 │ #ifdef USE_A
  │ ^
  │
  = missing import 'b'

